--- a/HW101/src/main/resources/templates/edit.html
+++ b/HW101/src/main/resources/templates/edit.html
@@ -45,13 +45,8 @@
         var id = $(location).attr('search');
         id = id.replace("?id=", "");
 
-        $.ajax({
-            url: '/api/book',
-            type: 'POST',
-            data: id,
-            success: function (bookFromServer) {
-                fillTheFields(bookFromServer);
-            }
+        $.get('/api/book/' + id).done(function (book) {
+            fillTheFields(book);
         });
 
         $("#savebutton").click(function () {
