id for delete from url

--- a/HW101/src/main/resources/templates/list.html
+++ b/HW101/src/main/resources/templates/list.html
@@ -97,7 +97,7 @@
             var todelete = this.id;
             todelete = todelete.replace("but", "");
             $.ajax({
-                url: '/api/delbook',
+                url: '/api/delete/' + todelete,
                 type: 'POST',
                 data: todelete,
                 success: function () {
