--- a/HW101/src/main/resources/templates/list.html
+++ b/HW101/src/main/resources/templates/list.html
@@ -98,7 +98,7 @@
             todelete = todelete.replace("but", "");
             $.ajax({
                 url: '/api/delete/' + todelete,
-                type: 'POST',
+                type: 'DELETE',
                 data: todelete,
                 success: function () {
                     $('#line' + todelete).remove();
