--- a/HW101/src/main/resources/templates/list.html
+++ b/HW101/src/main/resources/templates/list.html
@@ -99,8 +99,8 @@
             $.ajax({
                 url: '/api/delete/' + todelete,
                 type: 'DELETE',
-                data: todelete,
-                success: function () {
+                dataType:'json',
+                success: function (dataFromServer) {
                     $('#line' + todelete).remove();
                 }
             });
